# weather-api-course

./: .gitignore  ARCHITECTURE_GUIDE.md  PROGRESS_SYNC.md  README.md  WEATHER_API_COURSE_DOCUMENTATION.txt  _headers  index.html  requirements.txt  wac.sh
.claude/: launch.json
level-1/: README.md
level-1/00-curl-basics/: README.md
level-1/00-curl-basics/solution/: exercises.sh
level-1/01-python-requests/: README.md
level-1/02-auth-apis/: README.md
level-1/03-multi-source/: README.md
level-1/04-browser-fetch/: README.md
level-1/05-deploy/: README.md
level-1/06-api-security/: README.md
level-1/07-json-deep/: README.md
level-1/08-cors-mocking/: README.md
level-2/: README.md
level-2/00-postman-properly/: README.md
level-2/01-python-structure/: README.md
level-2/01-python-structure/solution/: pyproject.toml
level-2/01-python-structure/solution/src/weather/: __init__.py  cli.py
level-2/01-python-structure/solution/src/weather/sources/: __init__.py  open_meteo.py  openweather.py  weatherapi.py
level-2/01-python-structure/solution/tests/: test_sources.py
level-2/01-python-structure/starter/: pyproject.toml
level-2/01-python-structure/starter/src/weather/: cli.py
level-2/01-python-structure/starter/src/weather/sources/: open_meteo.py  openweather.py  weatherapi.py
level-2/01-python-structure/starter/tests/: test_sources.py
level-2/02-chaining-apis/: README.md
level-2/03-schedules-cron/: README.md
level-2/04-webhooks/: README.md
level-2/05-newman-testing/: .github-workflow-template.yml  README.md  collection.example.json  env.example.json
level-2/06-capstone/: README.md
src/wac_cli/: README.md  pyproject.toml
src/wac_cli/wac_cli/: __init__.py  cli.py
(+24 files in other folders)
