[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wac-cli"
version = "1.0.0"
description = "A native, cross-platform Python CLI wrapper for the Weather API Course helper"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "LexLabs" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
wac-cli = "wac_cli.cli:main"
